# CSC_478_Capstone_Project

./: package-lock.json  package.json
Portfolio Tracker/Portfolio Tracker/: ContentView.swift  DashboardView.swift  Item.swift  Portfolio_TrackerApp.swift  Sidebar.swift
Portfolio Tracker/Portfolio Tracker.xcodeproj/: project.pbxproj
Portfolio Tracker/Portfolio TrackerTests/: Portfolio_TrackerTests.swift
Portfolio Tracker/Portfolio TrackerUITests/: Portfolio_TrackerUITests.swift  Portfolio_TrackerUITestsLaunchTests.swift
backend/: .gitignore  main.py  pyproject.toml  requirements.txt  sql_app.db
backend/app/: create_test_user.py  init_db.py  main.py
backend/app/core/: config.py  database.py  deps.py  finnhub_client.py  security.py
backend/app/models/: __init__.py  portfolio.py  user.py  watchlist.py
backend/app/routes/: analytics.py  auth.py  portfolio.py  stocks.py  users.py
backend/app/schemas/: __init__.py  auth.py  portfolio.py  user.py  watchlist.py
backend/app/static/: scalar-docs.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  env.d.ts  index.css  main.tsx
frontend/src/pages/: Market.tsx  (+1 more)
portfolio_tracker/portfolio_tracker/: settings.py  urls.py
portfolio_tracker_flutter/: README.md  pubspec.yaml
portfolio_tracker_flutter/lib/: helpers.dart  main.dart
portfolio_tracker_flutter/test/: widget_test.dart
portfolio_tracker_frontend/: package.json
portfolio_tracker_react/: .env  README.MD  package-lock.json  package.json  vite.config.ts
python_backend/: main.py  requirements.txt
(+43 files in other folders)
