[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Anirudh Rao", email = "contactme@anirudhrao.dev"},
]
dependencies = [
    "fastapi>=0.115.3",
    "pydantic[email]>=2.9.2",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.36",
    "databases>=0.9.0",
    "python-dotenv>=1.0.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "fastapi-jwt-auth>=0.5.0",
    "httpx>=0.27.2",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.16",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "Capstone Project"}


[tool.pdm]
distribution = false
